Fixed large screen stretching issue and more semantic markup.

--- a/css/styles.css
+++ b/css/styles.css
@@ -152,5 +152,9 @@ p {
     margin:auto;
     padding-top: 3em;
   }
+  .container {
+    max-width: 1024px;
+    margin: 0 auto;
+  }
 
 }
